@@ -64,7 +64,8 @@ CORTEX_SRC_DIR = "$DEPENDENCIES_SRC_DIR/cortex-vfx/trunk"
 PKGCONFIG_SRC_DIR = "$DEPENDENCIES_SRC_DIR/pkg-config-0.23"
 PYOPENGL_SRC_DIR = "$DEPENDENCIES_SRC_DIR/PyOpenGL-3.0.1"
 QT_SRC_DIR = "$DEPENDENCIES_SRC_DIR/qt-everywhere-opensource-src-4.7.3"
-PYQT_SRC_DIR = "$DEPENDENCIES_SRC_DIR/PyQt-x11-gpl-4.8.4"
+SIP_SRC_DIR = "$DEPENDENCIES_SRC_DIR/sip-4.13.1"
+PYQT_SRC_DIR = "$DEPENDENCIES_SRC_DIR/PyQt-x11-gpl-4.9"
 RMAN_ROOT = "/Applications/Graphics/3Delight-10.0.4"
 
 APIEXTRACTOR_SRC_DIR = "$DEPENDENCIES_SRC_DIR/apiextractor-0.10.9"
